--- a/Applications/Settings.app/Localizations/Belarusian.lang
+++ b/Applications/Settings.app/Localizations/Belarusian.lang
@@ -10,6 +10,7 @@
 	screenPreferredMonitor = "Манітор",
 	screenScaleInfo = "Выкарыстанне гэтай опцыі дазволіць вам выбраць аптымальнае дазвол экрана, каб пазбавіцца ад эфекту «чорных прастакутнікаў»",
 	screenInvalidResolution = "Тэкст у палях уводу павінен складацца з лічбаў, быць большым за %d, а максімальнае раздзяленне не павінна перавышаць %d сімвалаў",
+	screenPreciseMode = "Precise mode",
 	
 	wallpaper = "Шпалеры",
 	wallpaperWallpaper = "Шпалеры",
