--- a/Applications/Settings.app/Localizations/Bengali.lang
+++ b/Applications/Settings.app/Localizations/Bengali.lang
@@ -10,6 +10,7 @@
 	screenPreferredMonitor = "মনিটর",
 	screenScaleInfo = "এই বিকল্পটি ব্যবহার করে আপনি \"কালো আয়তক্ষেত্র\" প্রভাব থেকে পরিত্রাণ পেতে সর্বোত্তম স্ক্রীন রেজোলিউশন নির্বাচন করতে পারবেন",
 	screenInvalidResolution = "ইনপুট ক্ষেত্রগুলিতে পাঠ্য সংখ্যাগুলি নিয়ে গঠিত হওয়া উচিত, %d এর চেয়ে বেশি হওয়া উচিত এবং সর্বাধিক রেজোলিউশন %d অক্ষরের বেশি হওয়া উচিত নয়",
+	screenPreciseMode = "Precise mode",
 	
 	wallpaper = "ওয়ালপেপার",
 	wallpaperWallpaper = "ওয়ালপেপার",
