--- a/Applications/Settings.app/Localizations/Bulgarian.lang
+++ b/Applications/Settings.app/Localizations/Bulgarian.lang
@@ -10,6 +10,7 @@
 	screenPreferredMonitor = "Монитор",
 	screenScaleInfo = "Използването на тази опция ще ви позволи да изберете оптималната разделителна способност на екрана, за да се отървете от ефекта \"черни правоъгълници\"",
 	screenInvalidResolution = "Текстът в полетата за въвеждане трябва да се състои от цифри, трябва да е по-голям от %d, а максималната разделителна способност не трябва да надвишава %d знака",
+	screenPreciseMode = "Precise mode",
 	
 	wallpaper = "тапет",
 	wallpaperWallpaper = "тапет",
