--- a/Applications/Settings.app/Localizations/English.lang
+++ b/Applications/Settings.app/Localizations/English.lang
@@ -10,7 +10,8 @@
 	screenPreferredMonitor = "Monitor",
 	screenScaleInfo = "Using this option will allow you to select the optimal screen resolution to get rid of the \"black rectangles\" effect",
 	screenInvalidResolution = "The text in the input fields should consist of digits, should be greater than %d, and the maximum resolution should't exceed %d characters",
-
+	screenPreciseMode = "Precise mode",
+	
 	wallpaper = "Wallpaper",
 	wallpaperWallpaper = "Wallpaper",
 	wallpaperScreensaver = "Screensaver",
