--- a/Applications/Settings.app/Localizations/German.lang
+++ b/Applications/Settings.app/Localizations/German.lang
@@ -10,7 +10,8 @@
 	screenPreferredMonitor = "Überwachung",
 	screenScaleInfo = "Mit dieser option können Sie die optimale Bildschirmauflösung auswählen, um den \"schwarze Rechtecke\" - Effekt loszuwerden",
 	screenInvalidResolution = "Der text in den Eingabefeldern sollte aus Ziffern bestehen, sollte größer als %d sein und die maximale Auflösung sollte %d Zeichen nicht überschreiten",
-
+	screenPreciseMode = "Precise mode",
+	
 	wallpaper = "Wallpaper",
 	wallpaperWallpaper = "Wallpaper",
 	wallpaperScreensaver = "Bildschirmschoner",
