--- a/Applications/Settings.app/Localizations/Russian.lang
+++ b/Applications/Settings.app/Localizations/Russian.lang
@@ -1,7 +1,7 @@
 {
 	open = "Открыть",
 	cancel = "Отмена",
-
+	
 	screen = "Экран",
 	screenResolution = "Разрешение",
 	screenAutoScale = "Автомасштабирование",
@@ -10,7 +10,7 @@
 	screenPreferredMonitor = "Монитор",
 	screenScaleInfo = "Использование этой опции позволит подобрать оптимальное разрешение экрана, чтобы избавиться от эффекта \"черных полос\"",
 	screenInvalidResolution = "Текст в полях ввода должен состоять из цифр, по значению быть не менее %d, а максимальное разрешение не должно превышать %d пикселей",
-	screenPreciseMode = "Precise mode",
+	screenPreciseMode = "Точный режим",
 	
 	wallpaper = "Обои и заставка",
 	wallpaperWallpaper = "Обои",
@@ -24,7 +24,7 @@
 	wallpaperStretch = "Растянуть",
 	wallpaperCenter = "По центру",
 	wallpaperInfo = "Отключение этой опции существенно снизит расход оперативной памяти и увеличит производительность",
-
+	
 	appearance = "Внешний вид",
 	appearanceExtensions = "Расширения файлов",
 	appearanceHidden = "Скрытые файлы",
@@ -44,18 +44,18 @@
 	appearanceDropDownDefaultBackground = "Фон контекстного меню",
 	appearanceDropDownDefaultText = "Текст контекстного меню",
 	appearanceDropDownSeparator = "Разделитель контекстного меню",
-
+	
 	users = "Пользователи",
-
+	
 	localizations = "Язык",
 	localizationsInfo = "Желаете больше языковых пакетов? Отсылайте pull request в репозиторий MineOS на GitHub",
-
+	
 	time = "Дата и время",
 	timeFormat = "Формат даты",
 	timeUseRealTimestamp = "Реальное время",
 	timeInfo = "Отключение этой опции позволит использовать игровое время вместо реального. Это полезно, если особенности хоста не позволяют получить временную метку позднее 1970 года",
 	timeZone = "Часовой пояс",
-
+	
 	network = "Сеть",
 	networkName = "Имя для окружающих",
 	networkEnabled = "Видимость в сети",
@@ -64,14 +64,14 @@
 	networkRemote = "Параметры удаленных ПК",
 	networkThis = "Параметры данного ПК",
 	networkNoModem = "Подключите модем для использования сетевых функций",
-
+	
 	tasks = "Автозапуск",
 	tasksInfo = "Вы можете добавить сколько угодно скриптов для их автоматического выполнения по порядку в указанный момент времени",
 	tasksBefore = "Выполнить до запуска ОС",
 	tasksAfter = "Выполнить после запуска ОС",
 	tasksPath = "Путь к скрипту",
 	tasksEnabled = "Выполнение включено",
-
+	
 	disks = "Диски",
 	disksFormat = "Форматировать",
 	disksBootable = "Сделать загрузочным",
@@ -85,15 +85,14 @@
 	disksSpaceUsed = "Использовано",
 	disksSpaceFree = "Свободно",
 	disksInfo = "Форматирование приведет к удалению всех данных с выбранного диска без возможности восстановления как в игре, так и на хосте",
-
+	
 	system = "Система",
 	systemArchitecture = "Архитектура CPU",
 	systemUnloading = "Автоматическая выгрузка",
 	systemRAM = "Управление памятью",
 	systemUnload = "Выгрузить библиотеку",
 	systemInfo = "Данная опция позволяет экономить память, выгружая неиспользуемые библиотеки методом \"Weak Link\". Отключите ее, если столкнетесь с какими-либо странностями или глюками в поведении сложных взаимозависимых систем",
-
-	users = "Пользователи",
+	
 	usersList = "Управление пользователями",
 	usersEditIcon = "Редактировать иконку",
 	usersChangeName = "Изменить имя",
