--- a/Applications/Settings.app/Localizations/Dutch.lang
+++ b/Applications/Settings.app/Localizations/Dutch.lang
@@ -1,7 +1,7 @@
 {
 	open = "Open",
 	cancel = "Annuleer",
-
+	
 	screen = "Scherm",
 	screenResolution = "Resolutie",
 	screenAutoScale = "Automatisch schalen",
@@ -10,7 +10,7 @@
 	screenPreferredMonitor = "Monitor",
 	screenScaleInfo = "Met deze optie kunt u de optimale schermresolutie selecteren om het \"zwarte hoeken\" effect weg te halen",
 	screenInvalidResolution = "De tekst in de invoervelden moet uit cijfers bestaan, moet groter zijn dan %d en de maximale resolutie mag niet meer zijn dan %d tekens",
-	screenPreciseMode = "Precise mode",
+	screenPreciseMode = "Nauwkeurige modus:",
 	
 	wallpaper = "Achtergrond",
 	wallpaperWallpaper = "Achtergrond",
@@ -24,7 +24,7 @@
 	wallpaperStretch = "Uitrekken",
 	wallpaperCenter = "Centreer",
 	wallpaperInfo = "Het uitschakelen van deze optie zal het RAM-verbruik aanzienlijk verminderen en de prestaties verbeteren",
-
+	
 	appearance = "Uiterlijk",
 	appearanceExtensions = "Bestandsextensies",
 	appearanceHidden = "Verborgen bestanden",
@@ -92,8 +92,7 @@
 	systemRAM = "Geheugenbeheer",
 	systemUnload = "Upload bibliotheek",
 	systemInfo = "Deze optie bespaart geheugen door ongebruikte bibliotheken te verwijderen met behulp van de \"Zwakke schakel\" -methode. Schakel het uit als u rancors of glitches tegenkomt in het gedrag van complexe onderling afhankelijke systemen",
-
-	users = "Gebruikers",
+	
 	usersList = "Gebruikersbeheer",
 	usersEditIcon = "Bewerk pictogram",
 	usersChangeName = "Verander naam",
