--- a/Applications/Settings.app/Localizations/Ukrainian.lang
+++ b/Applications/Settings.app/Localizations/Ukrainian.lang
@@ -1,7 +1,7 @@
 {
 	open = "Відкрити",
 	cancel = "Відмінити",
-
+	
 	screen = "Екран",
 	screenResolution = "Розширення",
 	screenAutoScale = "Автомасштабування",
@@ -10,7 +10,7 @@
 	screenPreferredMonitor = "Монітор",
 	screenScaleInfo = "Використання цієї опції дозволить підібрати оптимальне розширенння екрану, щоб позбутися від ефекту \"чорних смуг \"",
 	screenInvalidResolution = "Текст в полях введення повинен складатися з цифр, повинен бути більше %d, а максимальна роздільна здатність не повинна перевищувати %d символів",
-	screenPreciseMode = "Precise mode",
+	screenPreciseMode = "Точний режим",
 	
 	wallpaper = "Фон та заставка",
 	wallpaperWallpaper = "Шпалери",
@@ -24,7 +24,7 @@
 	wallpaperStretch = "Розтягнути",
 	wallpaperCenter = "По центру",
 	wallpaperInfo = "Відключення цієї опції істотно знизить витрати оперативної пам'яті і збільшить продуктивність",
-
+	
 	appearance = "Зовнішній вигляд",
 	appearanceExtensions = "Розширення файлів",
 	appearanceHidden = "Приховані файли",
@@ -44,18 +44,18 @@
 	appearanceDropDownDefaultBackground = "Фон випадаючого меню",
 	appearanceDropDownDefaultText = "Текст випадаюче меню",
 	appearanceDropDownSeparator = "Роздільник спадного меню",
-
-	users = "Користувачі",
-
+	
+	users = "Користувач",
+	
 	localizations = "Мова",
 	localizationsInfo = "Бажаєте більше мовних пакетів? Надсилайте pull request в репозиторій MineOS на GitHub",
-
+	
 	time = "Дата та час",
 	timeFormat = "Формат дати",
 	timeUseRealTimestamp = "Реальний час",
 	timeInfo = "Відключення цієї опції дозволить використовувати ігровий час замість реального. Це корисно, якщо особливості хоста не дозволяють отримати тимчасову мітку пізніше 1970 року",
 	timeZone = "Часовий пояс",
-
+	
 	network = "Мережа",
 	networkName = "Ім'я для оточуючих",
 	networkEnabled = "Видимість в мережі",
@@ -64,14 +64,14 @@
 	networkRemote = "Параметри віддалених ПК",
 	networkThis = "Параметри даного ПК",
 	networkNoModem = "Підключіть модем для використання мережевих функцій",
-
+	
 	tasks = "Автозапуск",
 	tasksInfo = "Ви можете додати скільки завгодно скриптів для їх автоматичного виконання по порядку в зазначений момент часу",
 	tasksBefore = "Виконати до запуску ОС",
 	tasksAfter = "Виконати після запуску ОС",
 	tasksPath = "Шлях до скрипту",
 	tasksEnabled = "Виконання ввімкнено",
-
+	
 	disks = "Диски",
 	disksFormat = "Форматувати",
 	disksBootable = "Зробити завантажувальним",
@@ -85,15 +85,14 @@
 	disksSpaceUsed = "Використано",
 	disksSpaceFree = "Вільно",
 	disksInfo = "Форматування призведе до видалення всіх даних з обраного диска без можливості відновлення як в грі, так і на хості",
-
+	
 	system = "Система",
 	systemArchitecture = "Архітектура CPU",
 	systemUnloading = "Автоматична вивантаження",
 	systemRAM = "Управління пам'яттю",
 	systemUnload = "Вивантажити бібліотеку",
 	systemInfo = "Дана опція дозволяє економити пам'ять, вивантажуючи невикористовувані бібліотеки методом \"Weak Link \". Вимкніть її, якщо зіткнетеся з якими-небудь дивацтвами або глюками в поведінці складних взаємозалежних систем",
-
-	users = "Користувач",
+	
 	usersList = "Управління користувачами",
 	usersEditIcon = "Змінити значок",
 	usersChangeName = "Змінити ім'я",
