--- a/Localizations/Bengali.lang
+++ b/Localizations/Bengali.lang
@@ -45,6 +45,7 @@
 	copying = "কপি করা হচ্ছে",
 	faylaBlyad = "ফাইলটি অনুলিপি করা হচ্ছে",
 	areYouSure = "আপনি কি নিশ্চিত?",
+	
 	emptyTrash = "খালি ট্র্যাশ",
 	type = "টাইপ",
 	size = "আকার",
@@ -54,9 +55,10 @@
 	folder = "ফোল্ডার",
 	unknown = "অজানা",
 	calculatingSize = "গণনা করা হচ্ছে ...",
-	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
-	fileDeletingFailure = "Failed to delete file",
+	filesWillBeRemovedPermanently = "ফাইল(গুলি) স্থায়ীভাবে মুছে ফেলা হবে",
+	fileDeletingFailure = "ফাইল মুছে ফেলতে ব্যর্থ হয়েছে৷",
 	properties = "বৈশিষ্ট্য",
+	
 	newFolderFromChosen = "নির্বাচিত",
 	create = "নতুন",
 	newFolder = "ফোল্ডার",
@@ -87,31 +89,37 @@
 	flashingEEPROM = "ফ্ল্যাশিং চলছে। কম্পিউটার বন্ধ করবেন না ...",
 	print3D = "মুদ্রিত মডেল",
 	sortBy = "বাছাই করুন",
+	
 	sortByType = "টাইপ করুন",
 	sortByName = "নাম দিয়ে",
 	sortByDate = "তারিখ অনুসারে",
 	aboutSystem = "সিস্টেম সম্পর্কে",
+	
 	updates = "আপডেট",
 	update = "রিফ্রেশ",
 	shutdown = "শাটডাউন",
 	logout = "লগআউট",
 	reboot = "রিবুট",
 	shortcutIsCorrupted = "শর্টকাটটি অস্তিত্বযুক্ত ফাইলের সাথে যুক্ত হয়েছে",
+	
 	sortAutomatically = "গ্রিডে প্রান্তিককরণ করুন",
 	onDesktop = "ডেস্কটপে",
 	inCurrentDirectory = "বর্তমান ফোল্ডারে",
 	errorWhileRunningProgram = "চলার সময় ত্রুটি ",
+	
 	sendedFeedback = "প্রতিক্রিয়া পাঠানো হয়েছিল",
 	sendFeedback = "প্রতিক্রিয়া পাঠান",
 	yourContacts = "আপনার পরিচিতিগুলি",
 	additionalInfo = "অতিরিক্ত তথ্য",
 	stackTraceback = "স্ট্যাক ট্রেসব্যাক",
 	favourite = "প্রিয়",
+	
 	search = "অনুসন্ধান",
 	mounts = "মাউন্টস",
 	uploadToPastebin = "পাস্তবিনে আপলোড করুন",
+	
 	pasteName = "আটকানো নাম",
 	uploading = "আপলোড চলছে ...",
 	uploadingSuccess = "আপলোড করা হয়েছে ",
-	uploadingFailure = "আপলোড ব্যর্থ হয়েছে: "
+	uploadingFailure = "আপলোড ব্যর্থ হয়েছে: ",
 }
