--- a/Localizations/Chinese.lang
+++ b/Localizations/Chinese.lang
@@ -45,7 +45,7 @@
 	toDirectory = "到文件夹",
 	copying = "复制中",
 	faylaBlyad = "文件",
-
+	
 	areYouSure = "你确定吗？",
 	emptyTrash = "清空回收站",
 	type = "类型",
@@ -56,9 +56,9 @@
 	folder = "文件夹",
 	unknown = "未知",
 	calculatingSize = "计算中...",
-	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
-	fileDeletingFailure = "Failed to delete file",
-
+	filesWillBeRemovedPermanently = "文件將被永久刪除",
+	fileDeletingFailure = "刪除文件失敗",
+	
 	properties = "属性",
 	newFolderFromChosen = "在所选文件夹里新建一个文件夹",
 	create = "新",
@@ -89,35 +89,35 @@
 	flashEEPROM = "烧录到EEPROM",
 	flashingEEPROM = "正在烧录到EEPROM。不要关闭电源...",
 	print3D = "打印模型",
-
+	
 	sortBy = "排序方式",
 	sortByType = "文件类型",
 	sortByName = "名称",
 	sortByDate = "日期",
-
+	
 	aboutSystem = "关于系统",
 	updates = "更新",
 	update = "刷新",
 	shutdown = "关机",
 	logout = "注销",
 	reboot = "重启",
-
+	
 	shortcutIsCorrupted = "快捷方式连接到了一个不存在的文件",
 	sortAutomatically = "对齐到网格",
 	onDesktop = "桌面上",
 	inCurrentDirectory = "在当前文件夹中",
-
+	
 	errorWhileRunningProgram = "发生错误，无法执行",
 	sendedFeedback = "反馈已发送",
 	sendFeedback = "发送反馈",
 	yourContacts = "联系方式",
 	additionalInfo = "额外信息",
 	stackTraceback = "堆栈跟踪",
-
+	
 	favourite = "收藏夹",
 	search = "搜索",
 	mounts = "挂载",
-
+	
 	uploadToPastebin = "上传到Pastebin",
 	pasteName = "Paste名称",
 	uploading = "正在上传...",
